--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -1,15 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <title>Shop Bridge Inventory</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     </head>
     <body>
-        <form method="POST" action="/add">
-            <input type="text" name="name" >
-            <input type="number" name="price">
-            <input type="text" name="description">
-            <input type="image" name="image">
-            <button type="submit" name="submit">Submit</button>
-        </form>
+        <div>
+            <button type="submit" name="button" id="button1">Add Inventory</button>
+
+            <form method="POST" action="/add" id="form">
+                <input type="text" name="name" >
+                <input type="number" name="price">
+                <input type="text" name="description">
+                <label>Upload Image:</label>
+                <input type="file" name="image">
+                <button type="submit" name="submit" id="button2">Submit</button>
+            </form>
+        </div>
+        <script src="{% static 'js/main.js' %}"></script>
     </body>
 </html>
